[gd_scene load_steps=6 format=3 uid="uid://ko8b35bbs4sy"]

[ext_resource type="Script" path="res://scripts/player_placeholder_test.gd" id="1_ocq8c"]
[ext_resource type="Texture2D" uid="uid://dflwueble4oi" path="res://sprites/PlayerPlaceholder_V2_2.png" id="2_164wg"]

[sub_resource type="Animation" id="Animation_tj75a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/TorsoBone2D/HeadBone2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-1.5708]
}

[sub_resource type="Animation" id="Animation_jeqb3"]
resource_name = "walk"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Skeleton2D/TorsoBone2D/HeadBone2D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, -1.69292]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k3g0n"]
_data = {
"RESET": SubResource("Animation_tj75a"),
"walk": SubResource("Animation_jeqb3")
}

[node name="Character" type="Node2D"]
position = Vector2(42, 109)
script = ExtResource("1_ocq8c")

[node name="Skeleton2D" type="Skeleton2D" parent="."]

[node name="TorsoBone2D" type="Bone2D" parent="Skeleton2D"]
rest = Transform2D(1, 0, 0, 1, 0, 0)

[node name="TorsoSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(0, -23)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(64, 0, 64, 64)

[node name="HeadBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-1, -57)
rotation = -1.5708
rest = Transform2D(-3.61999e-06, -1, 1, -3.61999e-06, -1, -57)
auto_calculate_length_and_angle = false
length = 16.0
bone_angle = 0.0

[node name="HeadSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D"]
position = Vector2(8.00001, -0.999969)
rotation = 1.57079
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(0, 0, 64, 64)

[node name="FaceSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D/HeadSprite2D"]
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(64, 64, 64, 64)

[node name="HairSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/HeadBone2D/HeadSprite2D"]
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(0, 64, 64, 64)

[node name="ArmLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(17, -40)
rotation = -0.523598
rest = Transform2D(0.866026, -0.499999, 0.499999, 0.866026, 17, -40)

[node name="ArmLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D"]
z_index = -1
position = Vector2(-6.00009, 18)
rotation = 0.261799
scale = Vector2(0.999981, 1.00005)
skew = -0.000163794
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="HandLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D"]
position = Vector2(-11, 38)
rotation = 0.523598
rest = Transform2D(0.866026, 0.499999, -0.499999, 0.866026, -11, 38)

[node name="HandLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmLeftBone2D/HandLeftBone2D"]
z_index = 1
position = Vector2(0, 9)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="ArmRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-16, -39)
rest = Transform2D(1, 0, 0, 1, -16, -39)

[node name="ArmRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D"]
position = Vector2(-6.00009, 18)
rotation = 0.261799
scale = Vector2(0.999981, 1.00005)
skew = -0.000163794
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 0, 32, 44)

[node name="HandRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D"]
position = Vector2(-11, 38)
rest = Transform2D(1, 0, 0, 1, -11, 38)

[node name="HandRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/ArmRightBone2D/HandRightBone2D"]
z_index = 1
position = Vector2(0, 9)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 44, 32, 19)

[node name="LegLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(13, 0)
rest = Transform2D(1, 0, 0, 1, 13, 0)

[node name="LegLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D"]
z_index = -1
position = Vector2(0, 15)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 64, 32, 44)

[node name="FootLeftBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D"]
position = Vector2(0, 35)
rest = Transform2D(1, 0, 0, 1, 0, 35)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 90.0

[node name="FootLeftSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegLeftBone2D/FootLeftBone2D"]
position = Vector2(0, 12)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 108, 32, 20)

[node name="LegRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D"]
position = Vector2(-13, 0)
rest = Transform2D(1, 0, 0, 1, -13, 0)

[node name="LegRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D"]
z_index = -1
position = Vector2(0, 15)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 64, 32, 44)

[node name="FootRightBone2D" type="Bone2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D"]
position = Vector2(0, 35)
rest = Transform2D(1, 0, 0, 1, 0, 35)
auto_calculate_length_and_angle = false
length = 10.0
bone_angle = 0.0

[node name="FootRightSprite2D" type="Sprite2D" parent="Skeleton2D/TorsoBone2D/LegRightBone2D/FootRightBone2D"]
position = Vector2(0, 12)
texture = ExtResource("2_164wg")
region_enabled = true
region_rect = Rect2(128, 108, 32, 20)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_k3g0n")
}
